<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>com.lv</groupId>
    <artifactId>fast-web</artifactId>
    <version>2.0.0</version>
    <name>fast-web</name>
    <description>spring boot web</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <hutool.version>5.8.36</hutool.version>
        <guava.version>33.4.8-jre</guava.version>
        <disruptor.version>4.0.0</disruptor.version>
        <knife4j.version>5.0.6</knife4j.version>
        <mica-xss.version>4.0.6</mica-xss.version>
        <docker-plugin.version>0.46.0</docker-plugin.version>
    </properties>

    <dependencies>

        <!-- 排除springboot日志包 主动引入log4j2使其成为唯一的日志实现-->
        <dependency>
            <artifactId>spring-boot-starter-logging</artifactId>
            <groupId>org.springframework.boot</groupId>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--Spring Boot 监控管理工具-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- log4j2依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>

        <!--log4j2异步日志所需依赖-->
        <dependency>
            <groupId>com.lmax</groupId>
            <artifactId>disruptor</artifactId>
            <version>${disruptor.version}</version>
        </dependency>

        <!--Spring Boot 参数校验-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!--Spring Boot Web (4.x 废弃 spring-boot-starter-web，改用 webmvc)-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>

        <!--aop (Spring Boot 4 移除了 spring-boot-starter-aop，AOP 自动配置已内置，仅需 aspectjweaver)-->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>

        <!--mysql驱动-->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>


        <!--lombok 简化开发工具-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!--单元测试-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.baizhukui</groupId>
            <artifactId>knife4j-openapi3-boot4-spring-boot-starter</artifactId>
            <version>${knife4j.version}</version>
        </dependency>


        <!--Mybatis Plus ORM框架-->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>

        <!--Mybatis Plus 分页插件所需 (3.5.9+ PaginationInnerInterceptor 移至独立模块)-->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-jsqlparser</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>

        <!--工具包集合-->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>

        <!--谷歌guava工具包-->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <!-- xss过滤 -->
        <dependency>
            <groupId>net.dreamlu</groupId>
            <artifactId>mica-xss</artifactId>
            <version>${mica-xss.version}</version>
        </dependency>

        <!--redis依赖配置-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <!--redis lettuce 连接池需要依赖-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <!-- JDK 23+ 不再自动发现 classpath 上的注解处理器，需显式声明 -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                    <layers>
                        <enabled>true</enabled>
                    </layers>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <tags>
                        <tag>
                            <name>generated-by</name>
                            <placement>a</placement>
                            <head>Generated By:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>
            <plugin>
                <!--官网：https://github.com/fabric8io/docker-maven-plugin-->
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>${docker-plugin.version}</version>
                <configuration>
                    <!--如果本机没有docker环境的话可以指定远程docker服务-->
                    <dockerHost>tcp://10.156.160.33:2375</dockerHost>
                    <!--镜像仓库 也可直接放在images.image.name, 可通过mvn -Ddocker.registry传入-->
                    <registry>docker.io</registry>
                    <!--
                        镜像仓库认证信息, 也可放在maven setting.xml中的<server>元素进行配置
                        注意授权信息配置此处：
                            优点：其他项目参与者可以直接推送镜像无需配置maven的setting.xml
                            缺点：是明文暴露在代码中
                            使用建议：镜像仓库和代码都是在内网,且密码可以告知开发人员
                    -->
                    <!--<authConfig>
                        <username>jolokia</username>
                        <password>s!cr!t</password>
                    </authConfig>-->
                    <images>
                        <image>
                            <!--也可将仓库地址放在此处,例${docker.registry}/${project.name}:${project.version},
                            其中变量${docker.registry}可通过mvn -Ddocker.registry传入,也可固定-->
                            <!--镜像名称-->
                            <name>${project.name}:${project.version}</name>
                            <build>
                                <!--指定dockerfile路径-->
                                <dockerFileDir>${project.basedir}/</dockerFileDir>
                            </build>
                        </image>
                    </images>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
